--- a/.github/workflows/auto-tag.yml
+++ b/.github/workflows/auto-tag.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Extract version from main.py
         run: |
-          VERSION=$(grep 'version=' main.py | cut -d'"' -f2)
+          VERSION=$(grep 'version=' main.py | sed -E 's/.*version="([^"]+)".*/\1/')
           echo "EXTRACTED_VERSION=$VERSION" >> $GITHUB_ENV
 
       - name: Set up Git user
