--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Extract version from main.py
         run: |
-          VERSION=$(grep 'version=' main.py | cut -d'"' -f2)
+          VERSION=$(grep 'version=' main.py | sed -E 's/.*version="([^"]+)".*/\1/')
           echo "EXTRACTED_VERSION=$VERSION" >> $GITHUB_ENV
 
       - name: Build and push Docker image
