fix: :bug: 修复 version 解析错误

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-  IMAGE_NAME: HitCircleAPI
+  IMAGE_NAME: hit-circle-api
 
 jobs:
   build-and-push:
